--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
         "angular-messages": "^1.7.5",
         "angular-resource": "^1.7.5",
         "angular-route": "^1.7.5",
-        "http-server": "^0.11.1",
-        "jwt-payload-decoder": "^1.2.4"
+        "http-server": "^0.11.1"
     },
     "scripts": {
         "start": "http-server -a 127.0.0.1 -p 8000 -c-1",
